After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672813 - [0.11] v4l2src aborts from assertion (meta != NULL)
[0.11] v4l2src aborts from assertion (meta != NULL)
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.11.x
Other Linux
: Normal normal
: 0.11.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-25 18:47 UTC by Tim McHugh
Modified: 2012-03-26 15:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Last part of debug=v4l*:5 output. (6.51 KB, text/x-log)
2012-03-25 18:47 UTC, Tim McHugh
Details

Description Tim McHugh 2012-03-25 18:47:35 UTC
Created attachment 210588 [details]
Last part of debug=v4l*:5 output.

Works: gst-launch-0.11 v4l2src io-mode=1 ! autovideosink
Fails: gst-launch-0.11 v4l2src ! autovideosink

Attached log from tail end of this: gst-launch-0.11 --gst-debug=v4l*:5 v4l2src ! autovideosink

Using jhbuild to get latest 0.11 branch. Using jhbuild shell to run gst-launch.
Comment 1 Wim Taymans 2012-03-26 15:25:24 UTC
commit fa436c0799039c15afb1ac3422241d3e3e2a24de
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Mon Mar 26 15:30:00 2012 +0200

    v4l2: called base class start
    
    Chain up to the base class start method so that metadata is properly tagged.
    Remove an unused variable.
    
    fixes: https://bugzilla.gnome.org/show_bug.cgi?id=672813